--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,41 @@
 {
-	"background": {
-		"scripts": [ "background.js" ]
-	},
-	"default_locale": "en",
-	"description": "__MSG_description__",
-	"content_scripts": [{
-			"js": ["script.js"],
-			"matches": ["*://music.163.com/*"],
-			"run_at": "document_start"
-	}],
-	"web_accessible_resources": ["inject.js"],
-	"icons": {
-		"16": "images/logo16.png",
-		"48": "images/logo48.png",
-		"128": "images/logo128.png"
-	},
-	"browser_action": {},
-	"manifest_version": 2,
-	"permissions": ["*://music.163.com/", "*://*.music.126.net/", "storage", "webRequest", "webRequestBlocking"],
+	"manifest_version": 3,
 	"name": "__MSG_name__",
-	"author": "nondanee",
-	"version": "0.0.5"
+	"version": "1.0.0",
+	"description": "__MSG_description__",
+	"default_locale": "en",
+	"permissions": ["storage", "declarativeNetRequest"],
+	"host_permissions": ["*://music.163.com/*", "*://*.music.126.net/*"],
+	"background": {
+		"service_worker": "background.js",
+		"type": "module"
+	},
+	"content_scripts": [
+		{
+			"matches": ["*://music.163.com/*"],
+			"js": ["content-script.js"],
+			"run_at": "document_start"
+		}
+	],
+	"web_accessible_resources": [
+		{
+			"resources": ["page-script.js"],
+			"matches": ["*://music.163.com/*"]
+		}
+	],
+	"declarative_net_request": {
+		"rule_resources": []
+	},
+	"action": {
+		"default_icon": {
+			"16": "images/grey16.png",
+			"48": "images/grey48.png",
+			"128": "images/grey128.png"
+		}
+	},
+	"icons": {
+		"16": "images/red16.png",
+		"48": "images/red48.png",
+		"128": "images/red128.png"
+	}
 }
